--- a/package.json
+++ b/package.json
@@ -21,5 +21,15 @@
   "bugs": {
     "url": "https://github.com/GIScience/ol-print-layout-control/issues"
   },
-  "homepage": "https://github.com/GIScience/ol-print-layout-control#readme"
+  "homepage": "https://github.com/GIScience/ol-print-layout-control#readme",
+  "devDependencies": {
+    "@vitest/coverage-c8": "^0.23.4",
+    "happy-dom": "^6.0.4",
+    "ol": "^7.1.0",
+    "rollup-plugin-typescript2": "^0.34.0",
+    "tslib": "^2.4.0",
+    "typescript": "^4.8.4",
+    "vite": "^3.1.4",
+    "vitest": "^0.23.4"
+  }
 }
