add test and dev and build setup with vite and vitest

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # some of the JetBrains project files
 /.idea/**/workspace.xml
 
+.idea/compiler.xml
 .idea/modules.xml
 .idea/*.iml
 
@@ -8,4 +9,4 @@
 .idea/sonarlint/
 
 # js packages
-/node_modules/
+**/node_modules/
