--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@giscience/ol-print-layout-control",
   "version": "0.0.0",
   "description": "An extension of an Openlayers Control. It Helps the user to define a map area that fits to the desired output page format and orientation.",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "main": "ol-print-layout-control.js",
   "types": "./dist/ol-print-layout-control.d.ts",
   "exports": {
@@ -11,11 +13,12 @@
     }
   },
   "scripts": {
+    "docs": "documentation readme src/ol-print-layout-control.ts --section=Docs",
     "test": "vitest",
     "coverage": "vitest run --coverage",
     "dev": "vite",
     "build": "vite build",
-    "preversion": "npm test"
+    "preversion": "npm run test && npm run build && npm run docs"
   },
   "repository": {
     "type": "git",
@@ -35,6 +38,7 @@
   "homepage": "https://github.com/GIScience/ol-print-layout-control#readme",
   "devDependencies": {
     "@vitest/coverage-c8": "^0.23.4",
+    "documentation": "^14.0.0",
     "jsdom": "^20.0.1",
     "ol": "^7.1.0",
     "rollup-plugin-typescript2": "^0.34.0",
