--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dist"
   ],
   "main": "dist/ol-print-layout-control.js",
+  "type": "module",
   "types": "./dist/ol-print-layout-control.d.ts",
   "exports": {
     ".": {
@@ -14,6 +15,9 @@
     "./dist/ol-print-layout-control.css": {
       "default": "./dist/ol-print-layout-control.css"
     }
+  },
+  "engines": {
+    "node": ">=22.12.0"
   },
   "scripts": {
     "docs": "documentation readme src/ol-print-layout-control.ts --section=Docs",
@@ -41,14 +45,13 @@
   },
   "homepage": "https://github.com/GIScience/ol-print-layout-control#readme",
   "devDependencies": {
-    "@vitest/coverage-c8": "^0.23.4",
-    "documentation": "^14.0.0",
-    "jsdom": "^20.0.1",
-    "ol": "^7.1.0",
-    "rollup-plugin-typescript2": "^0.34.0",
+    "@vitest/coverage-istanbul": "^3.2.4",
+    "documentation": "^14.0.3",
+    "ol": "^10.6.1",
+    "rollup-plugin-typescript2": "^0.36.0",
     "tslib": "^2.4.0",
-    "typescript": "^4.8.4",
-    "vite": "^3.1.4",
-    "vitest": "^0.23.4"
+    "typescript": "^5.9.3",
+    "vite": "^7.1.7",
+    "vitest": "^3.2.4"
   }
 }
